# component-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: rename.py
src/: __init__.py
tests/: conftest.py  test_component.py  test_pipeline.py
